# rocket-rs-webapp-template

./: Cargo.toml  Rocket.toml
migrations/2020-09-25-155247_create_users/: up.sql
migrations/2020-09-26-101512_user_tokens/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs  session.rs  user.rs
