[package]
name = "webapp_template"
version = "0.1.0"
authors = ["milchdealer <franzj94@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
sodiumoxide = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0"
branca = "0.9"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool", "diesel_sqlite_pool"]

[dependencies.diesel]
version = "1.4"
features = ["sqlite", "postgres", "chrono"]
